--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ class MakeTable extends React.Component{
                 <div className="heading">
                     <h2 style={{marginBottom: 0+'px'}}>CREDIT CHECKER</h2>
                 </div>
-                <form style="padding: 50px;">
+                <form style={{padding: 50+'px'}}>
                     <div className="form-group"><label for="name">所属</label><input className="form-control item" type="text" id="name"/></div>
                     <div className="form-group"><label for="subject">成績データ</label>
                         <div className="custom-file"><input type="file" className="custom-file-input"/><label className="custom-file-label">Upload File</label></div>
