--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ class MakeTable extends React.Component{
                     <h2 style={{marginBottom: 0+'px'}}>CREDIT CHECKER</h2>
                 </div>
                 <form style={{padding: 50+'px'}}>
-                    <div className="form-group"><label for="name">所属</label><input className="form-control item" type="text" id="name"/></div>
-                    <div className="form-group"><label for="subject">成績データ</label>
+                    <div className="form-group"><label htmlFor="name">所属</label><input className="form-control item" type="text" id="name"/></div>
+                    <div className="form-group"><label htmlFor="subject">成績データ</label>
                         <div className="custom-file"><input type="file" className="custom-file-input"/><label className="custom-file-label">Upload File</label></div>
                     </div>
                     <div className="form-group"><button className="btn btn-primary btn-block btn-lg" type="submit">Submit Form</button></div>
