--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@ class MakeTable extends React.Component{
   }
 
   managementState(){
-    if(this.state.date == null){
-       alert('成績を入力してください');
-    }else{
-      this.setState({bool:false});
-    }
+  
+    // if(this.state.date == null){
+    //    alert('成績を入力してください');
+    // }else{
+    //   this.setState({bool:false});
+    // }
+    
+    this.setState({bool:false});
 
   }
 
