--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
     <div id="root">
     <script type="text/babel">
+    
+import { Result } from 'assets/js/index.js';
+
 
 class MakeTable extends React.Component{
 
