--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <div id="root">
     <script type="text/babel">
     
+import React, { Component } from 'react';
+    
 class MakeTable extends React.Component{
 
   constructor() {
