--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="root">
     <script type="text/babel">
     
-import React, { Component } from 'react';
+import Result { Component } from 'assets/js/theme.js';
     
 class MakeTable extends React.Component{
 
