--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="root">
     <script type="text/babel">
     
-import Result from 'assets/js/theme.js';
+import Result from 'assets/js/index.js';
     
 class MakeTable extends React.Component{
 
